1、整理内容介绍

--- a/README
+++ b/README
@@ -1,13 +1,27 @@
 go-gin:
-    WebMng-1.0       基于页面的服务启动关闭程序清理日志程序
-    WebMng-2.0       升级及集合其它功能之后的程序
-test1 测试 gc
-test2 测试go build    [测试编译时 =+ 编译是否报错]
-test3 go tool trace   [可视化跟踪GMP]
-utils:
-    conf                conf文件解析工具
-    db                  数据库操作工具
-    log                 简单封装的日志模块
-    tcpServer           基于标准库封装的Tcp通讯模块
-    tools               常用的基础封装
-    uuid                生成唯一id的工具
+
+
+dome-test:
+    test1 测试 gc
+    test2 测试go build           [测试编译时 =+ 编译是否报错]
+    test3 go tool trace         [可视化跟踪GMP]
+    test4  fmt.printf ""        换行输出
+
+gin-test:
+    bubble                      小清单项目
+    test1                       gin 文件上传下载
+    WebMng-1.0                  基于页面的服务启动关闭程序清理日志程序
+    WebMng-2.0                  升级及集合其它功能之后的程序
+
+gorm-test:
+    main                        gorm 链接数据库测试
+
+grpc-test:
+    main                        基于官方文档实现的案例
+
+http-test:
+    test1                       基于net/http 编写web测试案例
+
+TYServer:                       自己练手的通用服务器框架开发
+
+vue:                            啥也没有
