--- a/generics-test/英汉对照版.md
+++ b/generics-test/英汉对照版.md
@@ -11,7 +11,7 @@
 - Conclusion(结束语) 
 - Completed code(最终代码) 
 
-#### Note: This is beta content.(重点: 这只是测试办的内容) 
+#### Note: This is beta content.(重点: 这只是测试版的内容) 
 #### 原文: 
         This tutorial introduces the basics of generics in Go. With generics, you can declare and use functions or types 
     that are written to work with any of a set of types provided by calling code.
@@ -384,35 +384,44 @@ From the command line in the directory containing main.go, run the code.(在main
   Generic Sums: 46 and 62.97
 ```
 To run your code, in each call the compiler replaced the type parameters with the concrete types specified in that call.
+(为了运行您的代码，在每次调用中，编译器将类型参数替换为该调用中指定的具体类型【译者注:编译器会在编译的时候切换成调用时需要的确定的类型】)
 
 In calling the generic function you wrote, you specified type arguments that told the compiler what types to use in 
 place of the function’s type parameters. As you’ll see in the next section, in many cases you can omit these type 
-arguments because the compiler can infer them.
+arguments because the compiler can infer them.(在调用你编写的泛型函数时，你指定了类型参数，告诉编译器使用什么类型来代替函数的类型参数。
+正如您将在下一节中看到的，在许多情况下您可以省略这些类型参数，因为编译器可以推断它们。)
 
 ## Remove type arguments when calling the generic function(调用泛型函数时移除类型参数) 
 
 #### 原文:
 In this section, you’ll add a modified version of the generic function call, making a small change to simplify the 
-calling code. You’ll remove the type arguments, which aren’t needed in this case.
+calling code. You’ll remove the type arguments, which aren’t needed in this case.(在本节中，您将添加通用函数调用的修改版本，并进
+行一些小的更改以简化调用代码。您将删除在这种情况下不需要的类型参数。)
 
 You can omit type arguments in calling code when the Go compiler can infer the types you want to use. The compiler 
-infers type arguments from the types of function arguments.
+infers type arguments from the types of function arguments.(当Go编译器可以推断出您想要使用的类型时，您就可以在调用代码中省略类型参数。
+编译器从调用函数参数的类型推断出类型参数。)
 
 Note that this isn’t always possible. For example, if you needed to call a generic function that had no arguments, 
-you would need to include the type arguments in the function call.
+you would need to include the type arguments in the function call.(请注意，有些情况下，编译器是推断不出来具体参数类型的。例如，如果
+您需要调用没有参数的泛型函数，则需要在函数调用中包含类型参数。)
 
 ### Write the code(编写代码)
-In main.go, beneath the code you already have, paste the following code.
+- In main.go, beneath the code you already have, paste the following code.(在 main.go 文件中所有代码的下方粘贴以下代码。)
 ```go
 fmt.Printf("Generic Sums, type parameters inferred: %v and %v\n",
     SumIntsOrFloats(ints),
     SumIntsOrFloats(floats))
 ```
-
     In this code, you:
     - Call the generic function, omitting the type arguments.
+  
+    在代码中，做了以下内容：
+    - 调用泛型函数，不填写类型参数。
+    
 ### Run the code(运行代码)
-From the command line in the directory containing main.go, run the code.
+From the command line in the directory containing main.go, run the code.(在main.go文件所在的目录中打开命令终端，运行代码
+【译者注:打开终端切换至main.go文件所在目录，运行代码，也可以】)
 ```shell
 $ go run .
 Non-Generic Sums: 46 and 62.97
@@ -420,28 +429,31 @@ Generic Sums: 46 and 62.97
 Generic Sums, type parameters inferred: 46 and 62.97
 ```
 Next, you’ll further simplify the function by capturing the union of integers and floats into a type constraint you can 
-reuse, such as from other code.
+reuse, such as from other code.(接下来，您将通过将整数和浮点数的并集捕获到可以重用的类型约束中来进一步简化泛型函数，例如来自其他代码使用)
 
 ## Declare a type constraint(声明类型范围/约束) 
 
 #### 原文:
 In this last section, you’ll move the constraint you defined earlier into its own interface so that you can reuse it in 
-multiple places. Declaring constraints in this way helps streamline code, such as when a constraint is more complex.
+multiple places. Declaring constraints in this way helps streamline code, such as when a constraint is more complex.(在最
+后一节中，您将把之前定义的约束移到它自己的接口中，以便您可以在多个地方重复使用它。以这种方式声明约束有助于简化代码，例如当约束更复杂时。)
 
 You declare a type constraint as an interface. The constraint allows any type implementing the interface. For example, 
 if you declare a type constraint interface with three methods, then use it with a type parameter in a generic function, 
-type arguments used to call the function must have all of those methods.
+type arguments used to call the function must have all of those methods.(将类型约束声明为接口。约束允许实现接口的任何类型。例如，
+您声明一个具有三个方法的类型约束接口，然后在泛型函数中将其与类型参数一起使用，则用于调用该函数的类型参数必须实现这些方法。)
 
-Constraint interfaces can also refer to specific types, as you’ll see in this section.
+Constraint interfaces can also refer to specific types, as you’ll see in this section.(正如您将在本节中看到的，约束接口也可以引
+用特定类型。)
 
 ### Write the code(编写代码)
+#### 原文
 - 1.Just above main, immediately after the import statements, paste the following code to declare a type constraint.
 ```go
 type Number interface {
     int64 | float64
 }
 ```
-
     In this code, you:
     - Declare the Number interface type to use as a type constraint.
     - Declare a union of int64 and float64 inside the interface.
@@ -475,9 +487,47 @@ fmt.Printf("Generic Sums with Constraint: %v and %v\n",
     - Call SumNumbers with each map, printing the sum from the values of each.
     - As in the preceding section, you omit the type arguments (the type names in square brackets) in calls to the 
       generic function. The Go compiler can infer the type argument from other arguments.
+#### 翻译
+- 1.在main函数上方，紧跟 import 语句之后，粘贴以下代码以声明类型约束。
+```go
+type Number interface {
+    int64 | float64
+}
+```
+    在代码中，做了以下内容:
+    - 声明 Number 接口类型以用作类型约束。
+    - 在接口内声明 int64 和 float64 的联合。
+      本质上，您正在将联合从函数声明移动到新的类型约束中。这样，当您想将类型参数约束为 int64 或 float64 时，您可以使用此 Number 类型约束而
+    不是写出 int64 |float64。
+
+- 2.在所有的代码下方，粘贴以下泛型SumNumbers 函数。
+```go
+// SumIntsOrFloats sums the values of map m. It supports both int64 and float64
+// as types for map values.
+func SumIntsOrFloats[K comparable, V int64 | float64](m map[K]V) V {
+    var s V
+    for _, v := range m {
+        s += v
+    }
+    return s
+}
+```
+    在代码中，做了以下内容:
+    - 使用与您之前声明的泛型函数相同的逻辑声明一个泛型函数，但使用新的接口类型而不是联合作为类型约束。和以前一样，您使用类型参数作为参数和返回
+    类型。
+- 3.在 main.go 中，在您已有的代码下方，粘贴以下代码。
+```go
+fmt.Printf("Generic Sums with Constraint: %v and %v\n",
+    SumNumbers(ints),
+    SumNumbers(floats))
+```
+    在代码中，做了以下内容:
+    - 对每个map 调用 SumNumbers，打印每个map值的总和。
+      与上一节一样，在对泛型函数的调用中省略了类型参数（方括号中的类型名称）。 Go 编译器可以从其他参数推断类型参数。
 
 ### Run the code(运行代码)
-From the command line in the directory containing main.go, run the code.
+From the command line in the directory containing main.go, run the code.(在main.go文件所在的目录中打开命令终端，运行代码
+【译者注:打开终端切换至main.go文件所在目录，运行代码，也可以】)
 ```shell
 $ go run .
 Non-Generic Sums: 46 and 62.97
@@ -486,7 +536,7 @@ Generic Sums, type parameters inferred: 46 and 62.97
 Generic Sums with Constraint: 46 and 62.97
 ```
 ## Conclusion(结束语)
-
+#### 原文
 Nicely done! You’ve just introduced yourself to generics in Go.
 
 If you want to keep experimenting, you can try writing the Number interface in terms of constraints.Integer and 
@@ -497,9 +547,17 @@ Suggested next topics:
 - The Go Tour is a great step-by-step introduction to Go fundamentals.
 - You’ll find useful Go best practices described in Effective Go and How to write Go code.
 
+#### 翻译
+做得很好！您刚刚向自己介绍了 Go 中的泛型。  
+如果你想继续试验，你可以尝试用constraints.Integer和constraints.Float来编写Number接口，以允许更多的数字类型。  
+建议下一个主题：  
+- 1.Go Tour 是对 Go 基础知识的分步介绍。
+- 2.您会在 Effective Go 和如何编写 Go 代码中找到有用的 Go 最佳实践。
+
 ## Completed code(最终代码) 
 
-You can run this program in the Go playground. On the playground simply click the Run button.
+You can run this program in the Go playground. On the playground simply click the Run button.(你可以在 Go Playground 中运
+行这个程序。在Playground上，只需单击“运行”按钮即可。)
 ```go
 package main
 
