1、增加大标题题号

--- a/generics-test/纯汉语版.md
+++ b/generics-test/纯汉语版.md
@@ -25,7 +25,7 @@
 #### 注意：有关其他教程，请参阅教程。
 #### 如果您愿意，您可以在“Go dev branch”模式下使用 Go playground 来编辑和运行您的程序。
 
-## 1、前提
+## 一、前提
 - **Go 1.18 Beta 1 或更高版本的安装。** 有关安装说明，请参阅安装和使用测试版。
 - **编辑代码的工具.** 任何文本编辑器都可以正常工作。
 - **命令终端。** Go 适用于 Linux 和 Mac 上的任何终端，以及 Windows 中的 PowerShell 或 cmd。
@@ -46,7 +46,7 @@
 
 本教程中的命令假定为通过别名方式来运行【译者注：后面使用到的"go"命令都为"go1.18beta1"命令】
 
-## 创建代码文件夹
+## 二、创建代码文件夹
 首先，你要为你编写的代码创建一个文件夹
 ### 1、打开一个命令终端，并移至你的Home目录下
 #### linux或者Mac系统上的命令为:
@@ -69,7 +69,7 @@
 
 接下来，你将添加一些简单的代码来处理Map
 
-## 添加非泛型函数
+## 三、添加非泛型函数
 
 在此步骤中，您将添加两个函数，每个函数将map中的值相加并返回总和。  
 你需要声明了两个函数而不是一个函数，因为您正在使用两种不同类型的map：一种存储 int64 类型值，另一种存储 float64 类型值。
@@ -147,7 +147,7 @@ Non-Generic Sums: 46 and 62.97
 ```
 使用泛型，您可以在这里编写一个函数而不是两个。接下来， 您将为包含int64或float64的map添加一个通用函数。
 
-## 添加一个泛型函数 用来处理多种类型
+## 四、添加一个泛型函数 用来处理多种类型
 在本节中，您将添加一个通用函数，该函数可以接收包含整数或浮点值的map，从而有效地用一个函数替换您刚刚编写的两个函数。  
 要支持任一类型的值，该通用函数将需要一种方法来声明它支持的类型。另外，调用代码也需要一种方法来指定它是使用整数映射还是浮点映射进行调用。  
 为了支持这一点，您将编写一个函数，除了它的普通函数参数外，还声明支持的类型参数。这些类型参数使函数具有通用性，使其能够处理不同类型的参数。您将使
@@ -209,9 +209,8 @@ fmt.Printf("Generic Sums: %v and %v\n",
 在调用你编写的泛型函数时，你指定了类型参数，告诉编译器使用什么类型来代替函数的类型参数。  
 正如您将在下一节中看到的，在许多情况下您可以省略这些类型参数，因为编译器可以推断它们。
 
-## 调用泛型函数时移除类型参数
+## 五、调用泛型函数时移除类型参数
 
-:
 在本节中，您将添加通用函数调用的修改版本，并进 行一些小的更改以简化调用代码。您将删除在这种情况下不需要的类型参数。  
 当Go编译器可以推断出您想要使用的类型时，您就可以在调用代码中省略类型参数。编译器从调用函数参数的类型推断出类型参数。  
 请注意，有些情况下，编译器是推断不出来具体参数类型的。例如，如果您需要调用没有参数的泛型函数，则需要在函数调用中包含类型参数。  
@@ -239,7 +238,7 @@ Generic Sums, type parameters inferred: 46 and 62.97
 ```
 接下来，您将通过将整数和浮点数的并集捕获到可以重用的类型约束中来进一步简化泛型函数，例如来自其他代码使用
 
-## 声明类型范围/约束
+## 六、声明类型范围/约束
 在最后一节中，您将把之前定义的约束移到它自己的接口中，以便您可以在多个地方重复使用它。以这种方式声明约束有助于简化代码，例如当约束更复杂时。  
 将类型约束声明为接口。约束允许实现接口的任何类型。例如，您声明一个具有三个方法的类型约束接口，然后在泛型函数中将其与类型参数一起使用，则用于调用
 该函数的类型参数必须实现这些方法。  
@@ -293,14 +292,14 @@ Generic Sums: 46 and 62.97
 Generic Sums, type parameters inferred: 46 and 62.97
 Generic Sums with Constraint: 46 and 62.97
 ```
-## 结束语
+## 七、结束语
 做得很好！您刚刚向自己介绍了 Go 中的泛型。  
 如果你想继续试验，你可以尝试用constraints.Integer和constraints.Float来编写Number接口，以允许更多的数字类型。  
 建议下一个主题：
 - 1.Go Tour 是对 Go 基础知识的分步介绍。
 - 2.您会在 Effective Go 和如何编写 Go 代码中找到有用的 Go 最佳实践。
 
-## 最终代码
+## 八、最终代码
 
 你可以在 Go Playground 中运行这个程序。在Playground上，只需单击“运行”按钮即可。
 ```go
